--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "dependencies": {
     "assert-never": "1.2.0",
-    "ts-loader": "8",
+    "ts-loader": "^9.2.3",
     "typescript": "^4.3.2",
-    "webpack": "4"
+    "webpack": "^5.38.1"
   },
   "devDependencies": {
     "webpack-cli": "^4.7.2"
